--- a/application/views/admin/layout.html
+++ b/application/views/admin/layout.html
@@ -35,12 +35,17 @@
   <link rel="stylesheet" href="{{base_url}}assets/ltev3/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
   <link rel="stylesheet" href="{{base_url}}assets/ltev3/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
 
+   <!-- dropzonejs -->
+   <link rel="stylesheet" href="assets/ltev3/plugins/dropzone/min/dropzone.min.css">
+
   <style>
     .swal2-styled-custom {
       margin: .3125em;
       box-shadow: none;
       font-weight: 500;
     }
+
+    
   </style>
 </head>
 
@@ -64,16 +69,8 @@
 	  $.widget.bridge('uibutton', $.ui.button)
 	</script>
 	<!-- Bootstrap 4 -->
-	<!-- <script src="{{base_url}}assets/ltev3/plugins/bootstrap/js/bootstrap.bundle.min.js"></script> -->
-	<!-- ChartJS -->
-	<script src="{{base_url}}assets/ltev3/plugins/chart.js/Chart.min.js"></script>
-	<!-- Sparkline -->
-	<script src="{{base_url}}assets/ltev3/plugins/sparklines/sparkline.js"></script>
-	<!-- JQVMap -->
-	<script src="{{base_url}}assets/ltev3/plugins/jqvmap/jquery.vmap.min.js"></script>
-	<script src="{{base_url}}assets/ltev3/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-	<!-- jQuery Knob Chart -->
-	<script src="{{base_url}}assets/ltev3/plugins/jquery-knob/jquery.knob.min.js"></script>
+	<script src="{{base_url}}assets/ltev3/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 	<!-- daterangepicker -->
 	<script src="{{base_url}}assets/ltev3/plugins/moment/moment.min.js"></script>
 	<script src="{{base_url}}assets/ltev3/plugins/daterangepicker/daterangepicker.js"></script>
@@ -90,8 +87,6 @@
 	<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 	<!-- <script src="{{base_url}}assets/ltev3/dist/js/pages/dashboard.js"></script> -->
 
-  <!-- jQuery -->
-  <script src="{{base_url}}assets/ltev3/plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script> -->
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script> -->
@@ -115,6 +110,8 @@
   <script src="{{base_url}}assets/ltev3/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
   <script src="{{base_url}}assets/ltev3/swal/swal.js"></script>
   <script src="{{base_url}}assets/ltev3/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
+  <!-- dropzonejs -->
+<script src="assets/ltev3/plugins/dropzone/min/dropzone.min.js"></script>
 
 
 	{% block js %}
