--- a/application/views/admin/users/listuser.html
+++ b/application/views/admin/users/listuser.html
@@ -154,7 +154,7 @@
           </div>
           <div class="col-md-6">
             <div class="text-center">
-                <img id="blah" class="profile-user-img img-fluid img-circle" src="assets/img/users/default.jpg" alt="User profile picture">
+                <img id="blah" class="profile-user-img img-fluid" src="assets/img/users/default.jpg" alt="User profile picture">
                 <canvas hidden id="myCanvas"/>
             </div>
           </div>
@@ -183,7 +183,7 @@
       <div class="modal-body">
           <div class="card-body box-profile">
             <div class="text-center">
-              <img id="detail-foto" class="profile-user-img img-fluid img-circle" src="assets/img/users/default.jpg" alt="User profile picture">
+              <img id="detail-foto" class="profile-user-img img-fluid" src="assets/img/users/default.jpg" alt="User profile picture">
             </div>
 
             <h3 class="profile-username text-center" id="detail-name">Nina Mcintire</h3>
