--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -87,19 +87,6 @@
                   <p>Produk Laporan</p>
                 </a>
               </li>
-              
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-user-cog"></i>
-              <p>
-                Konfigurasi
-                <i class="fas fa-angle-left right"></i>
-                <!-- <span class="badge badge-info right">6</span> -->
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
               <li class="nav-item">
                 <a href="pages/layout/top-nav.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
@@ -130,8 +117,22 @@
                   <p>Running Text</p>
                 </a>
               </li>
+              
             </ul>
           </li>
+          <!-- <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-user-cog"></i>
+              <p>
+                Konfigurasi
+                <i class="fas fa-angle-left right"></i>
+                <!-- <span class="badge badge-info right">6</span> --
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              
+            </ul>
+          </li> -->
           <li class="nav-item">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-photo-video"></i>
