--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -53,7 +53,7 @@
               </p>
             </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="info">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-info-circle"></i>
               <p>
@@ -63,32 +63,8 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Buku Profile</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Infografis</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Agenda</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Produk Laporan</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav.html" class="nav-link">
+              <li class="nav-item" id="profile">
+                <a href="profile" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Profile</p>
                 </a>
@@ -117,23 +93,34 @@
                   <p>Running Text</p>
                 </a>
               </li>
+              <li class="nav-item">
+                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Buku Profile</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="pages/layout/top-nav.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Infografis</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Agenda</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Produk Laporan</p>
+                </a>
+              </li>
               
             </ul>
           </li>
-          <!-- <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-user-cog"></i>
-              <p>
-                Konfigurasi
-                <i class="fas fa-angle-left right"></i>
-                <!-- <span class="badge badge-info right">6</span> --
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              
-            </ul>
-          </li> -->
-          <li class="nav-item">
+          <li class="nav-item" id="galeri">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-photo-video"></i>
               <p>
@@ -143,20 +130,20 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="pages/layout/top-nav.html" class="nav-link">
+              <li class="nav-item" id="poster">
+                <a href="poster" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Poster</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+              <li class="nav-item" id="foto">
+                <a href="foto" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Foto</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/boxed.html" class="nav-link">
+              <li class="nav-item" id="video">
+                <a href="video" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Video</p>
                 </a>
