--- a/application/views/admin/layout.html
+++ b/application/views/admin/layout.html
@@ -54,6 +54,7 @@
 	<div class="wrapper">
 		
 		{% include "admin/navbar.html" %}
+    {% include "admin/preloader.html" %}
 		{% include "admin/sidebar.html" %}
 		<div class="content-wrapper">
 			{% block content %} {% endblock %}
