--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -69,50 +69,50 @@
                   <p>Profile</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+              <li class="nav-item" id="infobalai">
+                <a href="infobalai" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Info Balai</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+              <li class="nav-item" id="kontak">
+                <a href="kontak" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Kontak</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+              <li class="nav-item" id="banner">
+                <a href="banner" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Banner</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/boxed.html" class="nav-link">
+              <li class="nav-item" id="runningtext">
+                <a href="runningtext" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Running Text</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+              <li class="nav-item" id="bukuprofile">
+                <a href="bukuprofile" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Buku Profile</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav.html" class="nav-link">
+              <li class="nav-item" id="infografis">
+                <a href="infografis" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Infografis</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+              <li class="nav-item" id="agenda">
+                <a href="agenda" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Agenda</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+              <li class="nav-item" id="produklaporan">
+                <a href="produklaporan" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Produk Laporan</p>
                 </a>
