--- a/application/views/admin/preloader.html
+++ b/application/views/admin/preloader.html
@@ -1,4 +1,4 @@
 <!-- Preloader -->
 <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="assets/ltev3/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+    <img class="animation__shake" src="assets/img/Dual-Ball.gif" alt="Loading..." height="60" width="60">
   </div>
