--- a/application/views/admin/menu/produklaporan.html
+++ b/application/views/admin/menu/produklaporan.html
@@ -4,12 +4,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1><i class="nav-icon fas fa-newspaper"></i> Berita </h1>
+        <h1><i class="nav-icon fas fa-info-circle"></i> Produk Laporan </h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="#">Berita</a></li>
-          <li class="breadcrumb-item active">List Berita</li>
+          <li class="breadcrumb-item"><a href="#">Info</a></li>
+          <li class="breadcrumb-item active">List Produk Laporan</li>
         </ol>
       </div>
     </div>
@@ -30,7 +30,7 @@
             <div class="card-tools">
               <div class="input-group input-group-sm">
                   <div class="btn btn-info" id="add-berita">
-                    <i class="fas fa-plus"></i><span> Tambah Berita</span>
+                    <i class="fas fa-plus"></i><span> Tambah Laporan</span>
                   </div>
               </div>
             </div>
@@ -44,16 +44,16 @@
                             No
                         </th>
                         <th>
-                            Gambar
-                        </th>
-                        <th>
                             Judul
                         </th>
                         <th>
-                            Info
+                            Kategori
                         </th>
                         <th>
-                            Dit
+                            File
+                        </th>
+                        <th>
+                            Info
                         </th>
                         <th>
                             action
