--- a/application/views/admin/menu/kontak.html
+++ b/application/views/admin/menu/kontak.html
@@ -4,13 +4,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1><i class="nav-icon fas fa-photo-video"></i> Foto </h1>
+        <h1><i class="nav-icon fas fa-info-circle"></i> Kontak </h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="#">Galery</a></li>
-          <li class="breadcrumb-item"><a href="#">Foto</a></li>
-          <li class="breadcrumb-item active">List Foto</li>
+          <li class="breadcrumb-item"><a href="#">Info</a></li>
+          <li class="breadcrumb-item active">Kontak</li>
         </ol>
       </div>
     </div>
@@ -31,7 +30,7 @@
             <div class="card-tools">
               <div class="input-group input-group-sm">
                   <div class="btn btn-info" id="add-foto">
-                    <i class="fas fa-plus"></i><span> Tambah Foto</span>
+                    <i class="fas fa-plus"></i><span> Tambah Kontak</span>
                   </div>
               </div>
             </div>
@@ -45,10 +44,10 @@
                             No
                         </th>
                         <th>
-                            Gambar
+                            Nama
                         </th>
                         <th>
-                            Judul
+                            Email
                         </th>
                         <th>
                             Info
