--- a/application/views/admin/menu/runningtext.html
+++ b/application/views/admin/menu/runningtext.html
@@ -4,13 +4,13 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1><i class="nav-icon fas fa-photo-video"></i> Foto </h1>
+        <h1><i class="nav-icon fas fa-info-circle"></i> Running Text </h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="#">Galery</a></li>
-          <li class="breadcrumb-item"><a href="#">Foto</a></li>
-          <li class="breadcrumb-item active">List Foto</li>
+          <li class="breadcrumb-item"><a href="#">Info</a></li>
+          <li class="breadcrumb-item"><a href="#">Running Text</a></li>
+          <li class="breadcrumb-item active">List Running Text</li>
         </ol>
       </div>
     </div>
@@ -45,10 +45,10 @@
                             No
                         </th>
                         <th>
-                            Gambar
+                            Judul Text
                         </th>
                         <th>
-                            Judul
+                            Text Url
                         </th>
                         <th>
                             Info
