--- a/application/views/admin/menu/foto.html
+++ b/application/views/admin/menu/foto.html
@@ -80,34 +80,30 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label>Judul</label>
-                <input id="" name="berita-input" type="text" class="form-control" placeholder="Judul Berita ...">
+                <input id="judul" name="foto-input" type="text" class="form-control" placeholder="Judul ...">
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
                 <label>Sektor</label>
-                <select class="form-control select2bs4" style="width: 100%;">
-                  <option selected="selected">Alabama</option>
-                  <option>Alaska</option>
-                  <option>California</option>
-                  <option>Delaware</option>
-                  <option>Tennessee</option>
-                  <option>Texas</option>
-                  <option>Washington</option>
+                <select class="form-control select2bs4" style="width: 100%;" id="sektor">
+                  <option value="0">-Pilih-</option>
+                  <option value="1">SETDITJEN</option>
+                  <option value="2">KIP</option>
+                  <option value="3">BPB</option>
+                  <option value="4">PKP</option>
+                  <option value="5">PPLP</option>
+                  <option value="6">PSPAM</option>
+                  <option value="7">PSP-POP</option>
                 </select>
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
                 <label>Tahun</label>
-                <select class="form-control select2bs4" style="width: 100%;">
-                  <option selected="selected">Alabama</option>
-                  <option>Alaska</option>
-                  <option>California</option>
-                  <option>Delaware</option>
-                  <option>Tennessee</option>
-                  <option>Texas</option>
-                  <option>Washington</option>
+                <select class="form-control select2bs4" style="width: 100%;" id="tahun">
+                  <option value="0">-Pilih-</option>
+                  <option value="2022">2022</option>
                 </select>
               </div>
             </div>
@@ -171,7 +167,7 @@
       </div>
       <div class="modal-footer">
         <!-- <button type="button" class="btn btn-primary">Tutup</button> -->
-        <button id="save-user" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
+        <button id="save-foto" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
       </div>
     </div>
     <!-- /.modal-content -->
