--- a/application/views/admin/layout.html
+++ b/application/views/admin/layout.html
@@ -44,6 +44,49 @@
       box-shadow: none;
       font-weight: 500;
     }
+
+    .preloader {
+      /* background-color :#f4f6f9d6!important; */
+      transition: none!important;
+      animation: fadeout 2s;
+      -moz-animation: fadeout 2s; /* Firefox */
+      -webkit-animation: fadeout 2s; /* Safari and Chrome */
+      -o-animation: fadeout 2s; /* Opera */
+    }
+
+    @keyframes fadeout {
+        from {
+            opacity:1;
+        }
+        to {
+            opacity:0;
+        }
+    }
+    @-moz-keyframes fadeout { /* Firefox */
+        from {
+            opacity:1;
+        }
+        to {
+            opacity:0;
+        }
+    }
+    @-webkit-keyframes fadeout { /* Safari and Chrome */
+        from {
+            opacity:1;
+        }
+        to {
+            opacity:0;
+        }
+    }
+    @-o-keyframes fadeout { /* Opera */
+        from {
+            opacity:1;
+        }
+        to {
+            opacity: 0;
+        }
+    }
+    
     
   </style>
 </head>
