--- a/application/views/admin/layout.html
+++ b/application/views/admin/layout.html
@@ -135,7 +135,7 @@
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script> -->
   <script src="{{base_url}}assets/ltev3/plugins/bootstrap/js/bootstrap.js"></script>
   <script src="{{base_url}}assets/ltev3/plugins/bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="{{base_url}}assets/ltev3/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="{{base_url}}assets/ltev3/plugins/bootstrap/js/bootstrap.bundle.min.js"></script> -->
   <!-- DataTables  & Plugins -->
   <script src="{{base_url}}assets/ltev3/plugins/datatables/jquery.dataTables.min.js"></script>
   <script src="{{base_url}}assets/ltev3/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
