--- a/application/views/admin/layout.html
+++ b/application/views/admin/layout.html
@@ -7,11 +7,11 @@
   <title>CIPTAKARYA - ADMIN</title>
 
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="stylesheet" href="{{base_url}}assets/css/font.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{{base_url}}assets/ltev3/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="{{base_url}}assets/ltev3/plugins/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bootstrap 4 -->
   <link rel="stylesheet" href="{{base_url}}assets/ltev3/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- iCheck -->
@@ -48,10 +48,10 @@
     .preloader {
       /* background-color :#f4f6f9d6!important; */
       transition: none!important;
-      animation: fadeout 2s;
-      -moz-animation: fadeout 2s; /* Firefox */
-      -webkit-animation: fadeout 2s; /* Safari and Chrome */
-      -o-animation: fadeout 2s; /* Opera */
+      animation: fadeout 5s;
+      -moz-animation: fadeout 5s; /* Firefox */
+      -webkit-animation: fadeout 5s; /* Safari and Chrome */
+      -o-animation: fadeout 5s; /* Opera */
     }
 
     @keyframes fadeout {
